--- a/package.json
+++ b/package.json
@@ -1,23 +1,36 @@
 {
-  "name": "photography",
+  "homepage": "https://mgwinnier.github.io/CSPhotography/",
+  "name": "got",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.96",
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "@types/react": "^18.2.60",
+    "@types/react-dom": "^18.2.19",
+    "axios": "^1.6.7",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.6",
+    "mdb-react-ui-kit": "^7.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
+    "react-image-lightbox": "^5.1.4",
+    "react-lazy-load-image-component": "^1.6.0",
+    "react-photo-gallery": "^8.0.0",
+    "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
+    "react-typist": "^2.0.5",
+    "tailwind-merge": "^2.2.1",
+    "typescript": "^5.3.3",
+    "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -39,5 +52,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.17",
+    "gh-pages": "^6.1.1",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1"
   }
 }
