--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mgwinnier.github.io/CSPhotography/",
+  "homepage": "http://crystalsaddlerphotography.com/",
   "name": "got",
   "version": "0.1.0",
   "private": true,
