--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-image-lightbox": "^5.1.4",
     "react-lazy-load-image-component": "^1.6.0",
+    "react-lazyload": "^3.2.1",
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
